RESOLVED FIXED231456
Fix crash in NetworkProcess preconnect due to dereferencing deallocated session
https://bugs.webkit.org/show_bug.cgi?id=231456
Summary Fix crash in NetworkProcess preconnect due to dereferencing deallocated session
Ben Nham
Reported 2021-10-08 14:59:52 PDT
Fix crash in NetworkProcess preconnect due to dereferencing deallocated session
Attachments
Patch (2.09 KB, patch)
2021-10-08 15:01 PDT, Ben Nham
no flags
Ben Nham
Comment 1 2021-10-08 15:01:42 PDT
Ben Nham
Comment 2 2021-10-08 15:01:45 PDT
Chris Dumez
Comment 3 2021-10-08 15:03:29 PDT
Comment on attachment 440678 [details] Patch r=me
EWS
Comment 4 2021-10-08 15:57:21 PDT
Committed r283846 (242725@main): <https://commits.webkit.org/242725@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 440678 [details].
Note You need to log in before you can comment on or make changes to this bug.