Cherry-pick r283846. rdar://problem/84117050

Fix crash in NetworkProcess preconnect due to dereferencing deallocated session
    https://bugs.webkit.org/show_bug.cgi?id=231456
    <rdar://problem/83752148>

    Reviewed by Chris Dumez.

    We capture a raw NetworkSession reference in the preconnect completion handler. This
    reference could point to a deallocated object if the NetworkSession dies before the
    preconnect finishes.

    * NetworkProcess/NetworkProcess.cpp:
    (WebKit::NetworkProcess::preconnectTo):

    Canonical link: https://commits.webkit.org/242725@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283846 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/240672.166@safari-612.2.9.3-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-612.2.9.3-branch@283942 268f45cc-cd09-0410-ab3c-d52691b4dbfc